force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Account_Number_Masked__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Masked__c</fullName>
    <description>Masked account number for display to customers (e.g. XXXX-XXXX-4521).</description>
    <label>Account Number (Masked)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>