force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Current_EMI__c.field-meta.xml
<CustomField>
    <fullName>Current_EMI__c</fullName>
    <description>Current monthly EMI for loan accounts. Developer: BlueForce Team.</description>
    <label>Current EMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>