force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Is_Restructured__c.field-meta.xml
<CustomField>
    <fullName>Is_Restructured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this loan has been restructured. Developer: BlueForce Team.</description>
    <label>Is Restructured</label>
    <type>Checkbox</type>
</CustomField>