force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Last_Restructure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Restructure_Date__c</fullName>
    <description>Date of the most recent loan restructuring. Developer: BlueForce Team.</description>
    <label>Last Restructure Date</label>
    <type>Date</type>
</CustomField>